--- a/assets/css/proyectos_1.css
+++ b/assets/css/proyectos_1.css
@@ -57,9 +57,7 @@
 }
 
 /*--------blue container-------*/
-.section_2 {
-    margin-left: 5%;
-}
+ 
 .container_blue_1_proyectos {
     width: 100%;
     position: relative;
@@ -133,11 +131,7 @@
     margin-right: 15px;
     color: #fff;
     font-weight: 600;
-}
-
-.line_blue {
-    padding: 2% 0%;
-}
+} 
 
 hr {
     border-top: 2px solid #ffffff;
@@ -216,6 +210,10 @@ hr {
     text-align: center;
     font-size: 40px;
 }
+.text_blue_col_2 {
+    width: 100%;
+}
+                
 /*---white-content------*/
 .container_white_1_proyectos {
     width: 100%;
@@ -249,131 +247,128 @@ hr {
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     /*-----container-proyectos-----*/
-        .container_proyectos_3 {
-            width: 100%;
-            position: relative;
-            display: flex;
-            row-gap: 30px;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-between;
-            color: #000000;
-        }
-    
-        .container_text_3 {
-            width: 100%;
-            position: relative;
-            display: flex;
-            flex-wrap: nowrap;
-            row-gap: 30px;
-            align-items: flex-start;
-            flex-direction: column;
-            justify-content: space-between;
-            color: #363435;
-        }
-    
-        .section_2 {
-            margin-left: 0%;
-        }
-    
-        /*- ---blue container----*/
-        .container_grid_blue {
-            width: 100%;
-            position: relative;
-            display: flex;
-            flex-wrap: nowrap;
-            row-gap: 30px;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-between;
-            color: #fff;
-        }
-    
-        .content_row_5_info {
-            position: absolute;
-            top: 40%;
-            color: #fff;
-            text-transform: uppercase;
-            font-weight: bold;
-            text-align: center;
-            font-size: 40px;
-        }
-    
-        .content_row_5 {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-    
-        /*------text-text--------*/
-        .section_1 {
-            width: 100%;
-            position: relative;
-            display: flex;
-            flex-wrap: nowrap;
-            row-gap: 89px;
-            align-items: center;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-     
+    .container_proyectos_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #000000;
     }
+
+    .container_text_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #363435;
+    }
+  
+    
+    /*- ---blue container----*/
+    .container_grid_blue {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #fff;
+    }
+
+    .content_row_5_info {
+        position: absolute;
+        top: 40%;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .content_row_5 {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    /*------text-white--------*/
+    .section_1 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 89px;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tittle_white {
+        font-size: 2.5em;
+    }
+}
 
  @media screen and (min-width: 768px) and (max-width: 1023px) {
     /*-----container-proyectos-----*/
-    .container_proyectos_3 {
-            width: 100%;
-            position: relative;
-            display: flex;
-            row-gap: 30px;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-between;
-            color: #000000;
-        }
-        .container_text_3 {
-            width: 100%;
-            position: relative;
-            display: flex;
-            flex-wrap: nowrap;
-            row-gap: 30px;
-            align-items: flex-start;
-            flex-direction: column;
-            justify-content: space-between;
-            color: #363435;
-        }
-        .section_2 {
-            margin-left: 0%;
-        }
-    /*- ---blue container----*/
-    .container_grid_blue {
-            width: 100%;
-            position: relative;
-            display: flex;
-            flex-wrap: nowrap;
-            row-gap: 30px;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-between;
-            color: #fff;
-        }
-        .content_row_5_info {
-            position: absolute;
-            top: 40%;
-            color: #fff;
-            text-transform: uppercase;
-            font-weight: bold;
-            text-align: center;
-            font-size: 40px;
-        }
-        .content_row_5 {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-    /*------text-text--------*/
+.container_proyectos_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #000000;
+    }
+    .container_text_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #363435;
+    }
+ 
+/*- ---blue container----*/
+.container_grid_blue {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #fff;
+    }
+    .content_row_5_info {
+        position: absolute;
+        top: 40%;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        font-size: 40px;
+    }
+    .content_row_5 {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    /*------text-white--------*/
     .section_1 {
             width: 100%;
             position: relative;
@@ -384,8 +379,222 @@ hr {
             flex-direction: row;
             justify-content: space-between;
         }
-    
- }
+         .tittle_white {
+            font-size: 2.5em;
+         }
+    }
  @media screen and (max-width: 767px) {
+/*-----container-proyectos-----*/
+    .container_proyectos_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #000000;
+    }
 
+    .container_text_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #363435;
+    } 
+    /*- ---blue container----*/
+    .container_grid_blue {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #fff;
+    }
+
+    .content_row_5_info {
+        position: absolute;
+        top: 40%;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .content_row_5 {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    /*------text-white--------*/
+    .section_1 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 89px;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tittle_white {
+        font-size: 2.5em;
+    }
+ }
+  
+@media screen and (min-width: 425px) and (max-width: 767px) {
+    /*-----container-proyectos-----*/
+    .container_proyectos_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #000000;
+    }
+
+    .container_text_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #363435;
+    }
+
+
+    /*- ---blue container----*/
+    .container_grid_blue {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #fff;
+    }
+
+    .content_row_5_info {
+        position: absolute;
+        top: 40%;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .content_row_5 {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    /*------text-white--------*/
+    .section_1 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 89px;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tittle_white {
+        font-size: 2.5em;
+    }
+ }
+
+ @media screen and (max-width: 425px) {
+    /*-----container-proyectos-----*/
+    .container_proyectos_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #000000;
+    }
+    
+    .container_text_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #363435;
+    }
+    .tittle_style_desktop_text {
+        font-size: 2.0em;
+    }
+    
+    /*- ---blue container----*/
+    .container_grid_blue {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #fff;
+    }
+
+    .content_row_5_info {
+        position: absolute;
+        top: 40%;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .content_row_5 {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    /*------text-text--------*/
+    .section_1 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 89px;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tittle_white {
+        font-size: 2.5em;
+    }
  }
