--- a/assets/css/catalogo_ampliacion.css
+++ b/assets/css/catalogo_ampliacion.css
@@ -4,6 +4,34 @@
     padding: 0% 0% 5% 0%;
 }
 /*-----------*/
+
+
+/*-----swiper-------*/
+
+.swiper-catalogo {
+    background-color: #000;
+    width: 75%;
+}
+ .swiper_catalogo .swiper-pagination {
+     --swiper-pagination-color: #ffffff;
+     --swiper-pagination-border-color: #e94141;
+     --swiper-pagination-bullet-background-color: #9e2020c4;
+     --swiper-pagination-bullet-size: 8px;
+     --swiper-pagination-bullet-width: 12px;
+     --swiper-pagination-bullet-height: 12px;
+     --swiper-pagination-bullet-inactive-color: #000;
+     --swiper-pagination-bullet-inactive-opacity: 0.2;
+     --swiper-pagination-bullet-opacity: 1;
+     --swiper-pagination-bullet-horizontal-gap: 2px;
+     --swiper-pagination-bullet-border-radius: 0px;
+ }
+.container_catalogo_ampliacion {
+    width: 100%;
+    position: relative;
+    padding: 3% 0 0% 0%;
+    display: block;
+}
+
 .container_swiper_catalogo {
     width: 85%;
     max-width: 1366px;
@@ -11,3 +39,32 @@
     margin: 0 auto;
     display: block;
 }
+.container_catalogo_3 {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.swiper_catalogo {
+    width: 100%;
+    height: 100%;
+}
+.swiper_catalogo > .swiper-wrapper > .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper_catalogo > .swiper-wrapper > .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
