--- a/assets/css/blogs_1.css
+++ b/assets/css/blogs_1.css
@@ -1,10 +1,12 @@
 /*---container cards----*/
+
 .container_cards_01 {
     width: 100%;
     display: block;
     position: relative;
     padding: 6em 0;
 }
+
 .container_cards_02 {
     width: 85%;
     max-width: 1366px;
@@ -12,6 +14,7 @@
     position: relative;
     margin: 0 auto;
 }
+
 .container_cards_03 {
     display: flex;
     align-items: center;
@@ -19,26 +22,275 @@
     gap: 20px;
     flex-direction: column;
 }
+
 .cards_content_1 {
     width: 100%;
     display: flex;
     position: relative;
     gap: 5%;
 }
+
 .cards_content_2 {
     width: 100%;
     display: flex;
     position: relative;
     gap: 5%;
 }
+
 .cards_2 {
     width: 100%;
     display: flex;
     position: relative;
     gap: 5%;
 }
+
 .card_01 {
-    width: 100%; 
-    background-color: black;
-    padding: 1% 1%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.content_text_card {
+    width: 90%;
+    position: absolute;
+    bottom: 13px;
+    color: #fff;
+    padding: 2rem;
+}
+
+.text_card {
+    bottom: 5px;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25em;
+    line-height: 20px;
+    letter-spacing: -1px;
+    position: relative;
+    text-transform: uppercase;
+}
+
+
+/*---tambien te puede interesar-----*/
+
+.container_cards_002 {
+    width: 100%;
+    display: block;
+    position: relative;
+    padding: 1% 0% 2% 0%;
+}
+
+.tittle_2_blog {
+    align-items: center;
+    font-size: 3.9em;
+    font-weight: 600;
+    line-height: 90%;
+    color: #363435;
+    text-transform: uppercase;
+    font-family: 'Frank Ruhl Libre', serif;
+    letter-spacing: -3px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 0% 0% 3% 0%;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .cards_content_1 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 3%;
+    }
+    .cards_content_2 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 3%;
+    }
+    .content_text_card {
+        width: 94%;
+        position: absolute;
+        bottom: 8px;
+        color: #fff;
+        padding: 0.9em;
+    }
+    .text_card {
+        bottom: 5px;
+        font-family: 'Frank Ruhl Libre';
+        font-size: 0.9em;
+        line-height: 13px;
+        letter-spacing: -1px;
+        position: relative;
+        text-transform: uppercase;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .container_cards_01 {
+        width: 100%;
+        display: block;
+        position: relative;
+        padding: 2em 0;
+    }
+    .container_cards_02 {
+        width: 92%;
+        max-width: 1366px;
+        display: block;
+        position: relative;
+        margin: 0 auto;
+    }
+    .cards_content_1 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 2%;
+    }
+    .cards_content_2 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 2%;
+    }
+    .content_text_card {
+        width: 96%;
+        position: absolute;
+        bottom: 5px;
+        color: #fff;
+        padding: 0.4rem;
+    }
+    .text_card {
+        font-family: 'Frank Ruhl Libre';
+        font-size: 1.0em;
+        line-height: 14px;
+        letter-spacing: -1px;
+        position: relative;
+        text-transform: uppercase;
+    }
+    .text_card_small {
+        font-size: 0.8em;
+    }
+    /*---tambien te puede interesar-----*/
+    .tittle_2_blog {
+        align-items: center;
+        font-size: 2.9em;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+    .container_cards_01 {
+        width: 100%;
+        display: block;
+        position: relative;
+        padding: 1.5em 0;
+    }
+    .container_cards_02 {
+        width: 85%;
+        max-width: 1366px;
+        display: block;
+        position: relative;
+        margin: 0 auto;
+    }
+    .cards_content_1 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 2%;
+        flex-direction: column;
+    }
+    .cards_content_2 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 2%;
+        flex-direction: column;
+    }
+    .content_text_card {
+        width: 85%;
+        position: absolute;
+        bottom: 10px;
+        color: #fff;
+        padding: 3em 1em;
+    }
+    .text_card {
+        font-family: 'Frank Ruhl Libre';
+        font-size: 1.2em;
+        line-height: 18px;
+        letter-spacing: -1px;
+        position: relative;
+        text-transform: uppercase;
+    }
+    .text_card_small {
+        font-size: 1em;
+    }
+    .card_01 {
+        width: 100%;
+        margin: 4% 0%;
+        display: flex;
+        justify-content: center;
+    }
+    /*---tambien te puede interesar-----*/
+    .tittle_2_blog {
+        align-items: center;
+        font-size: 2.3em;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .container_cards_01 {
+        width: 100%;
+        display: block;
+        position: relative;
+        padding: 1em 0;
+    }
+    .container_cards_02 {
+        width: 85%;
+        max-width: 1366px;
+        display: block;
+        position: relative;
+        margin: 0 auto;
+    }
+    .cards_content_1 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 2%;
+        flex-direction: column;
+    }
+    .cards_content_2 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        gap: 2%;
+        flex-direction: column;
+    }
+    .content_text_card {
+        width: 85%;
+        position: absolute;
+        bottom: 10px;
+        color: #fff;
+        padding: 0em 0.2em;
+    }
+    .text_card {
+        font-family: 'Frank Ruhl Libre';
+        font-size: 1.2em;
+        line-height: 18px;
+        letter-spacing: -1px;
+        position: relative;
+        text-transform: uppercase;
+    }
+    .text_card_small {
+        font-size: 1em;
+    }
+    .card_01 {
+        width: 100%;
+        margin: 4% 0%;
+        display: flex;
+        justify-content: center;
+    }
+    /*---tambien te puede interesar-----*/
+    .tittle_2_blog {
+        align-items: center;
+        font-size: 1.7em;
+    }
 }
