--- a/assets/css/catalogo_ampliacion.css
+++ b/assets/css/catalogo_ampliacion.css
@@ -1,156 +1,126 @@
 .catalogo_text {
-    display: flex;
-    justify-content: center;
-    padding: 0% 0% 5% 0%;
+  display: flex;
+  justify-content: center;
+  padding: 0% 0% 5% 0%;
 }
 /*-----------*/
 
-
 /*-----swiper-------*/
 
-.swiper-catalogo { 
-    width: 75%;
+.swiper-catalogo {
+  width: 75%;
 }
- .swiper_catalogo .swiper-pagination {
-     --swiper-pagination-color: #ffffff;
-     --swiper-pagination-border-color: #e94141;
-     --swiper-pagination-bullet-background-color: #9e2020c4;
-     --swiper-pagination-bullet-size: 8px;
-     --swiper-pagination-bullet-width: 12px;
-     --swiper-pagination-bullet-height: 12px;
-     --swiper-pagination-bullet-inactive-color: #000;
-     --swiper-pagination-bullet-inactive-opacity: 0.2;
-     --swiper-pagination-bullet-opacity: 1;
-     --swiper-pagination-bullet-horizontal-gap: 2px;
-     --swiper-pagination-bullet-border-radius: 0px;
- }
+
 .container_catalogo_ampliacion {
-    width: 100%;
-    position: relative;
-    padding: 3% 0 0% 0%;
-    display: block;
+  width: 100%;
+  position: relative;
+  padding: 3% 0 0% 0%;
+  display: block;
 }
 
 .container_swiper_catalogo {
-    width: 85%;
-    max-width: 1366px;
-    position: relative;
-    margin: 0 auto;
-    display: block;
+  width: 85%;
+  max-width: 1366px;
+  position: relative;
+  margin: 0 auto;
+  display: block;
 }
 .container_catalogo_3 {
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 30px;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 30px;
+  flex-direction: column;
+  align-items: center;
 }
-
 
 .swiper_catalogo {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .swiper_catalogo > .swiper-wrapper > .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .swiper_catalogo > .swiper-wrapper > .swiper-slide img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /*-----*/
 .swiper_content_slider_catalogo {
-    width: 100%;
-    justify-content: left;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    padding: 0%;
-    background-color: #F2F2F2;
+  width: 100%;
+  justify-content: left;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 0%;
+  background-color: #f2f2f2;
 }
 .content_catalogo_01 {
-    width: 100%;
-    display: flex;
-    position: relative;
-    /* justify-content: center; */
+  width: 100%;
+  display: flex;
+  position: relative;
+  /* justify-content: center; */
 }
 .img_col_1_catalogo {
-    width: 50%;
+  width: 50%;
 }
 .content_catalogo_col_1 {
-    width: 100%;
-    display: flex;
-    padding: 5em;
-    flex-direction: column;
-    flex-wrap: nowrap;
+  width: 100%;
+  display: flex;
+  padding: 5em;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 .catalogo_tittle {
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.8em;
-    font-weight: 700;
-    line-height: 43px;
-    text-transform: uppercase;
-    color: #363435;
-    letter-spacing: -2px;
+  font-family: "Frank Ruhl Libre", serif;
+  font-size: 2.8em;
+  font-weight: 700;
+  line-height: 43px;
+  text-transform: uppercase;
+  color: #363435;
+  letter-spacing: -2px;
 }
- .ref_share_catalogo {
-     width: 100%;
-     display: flex;
-     padding: 3% 0%;
-     text-transform: uppercase;
- }
- img.share_icon_catalogo {
-     width: 5%;
-     
- }
-  .swiper-horizontal>.swiper-pagination-bullets,
-  .swiper-pagination-bullets.swiper-pagination-horizontal,
-  .swiper-catalogo-pagination,
-  .swiper-pagination-fraction  > .catalogo-pagination {
-      top: unset !important;
-      bottom: unset !important;
-      position: relative;
-      margin-bottom: 3%;
-      margin-top: 3%;
-  }
- 
- 
-span.swiper-pagination-bullet.swiper-pagination-bullet-active.swiper-pagination-bullet-active-main {
-    --swiper-pagination-color: #ffffff;
-        --swiper-pagination-border-color: #e94141;
-        --swiper-pagination-bullet-background-color: #9e2020c4;
-        --swiper-pagination-bullet-size: 8px;
-        --swiper-pagination-bullet-width: 12px;
-        --swiper-pagination-bullet-height: 12px;
-        --swiper-pagination-bullet-inactive-color: #000;
-        --swiper-pagination-bullet-inactive-opacity: 0.2;
-        --swiper-pagination-bullet-opacity: 1;
-        --swiper-pagination-bullet-horizontal-gap: 2px;
-        --swiper-pagination-bullet-border-radius: 0px;
+.ref_share_catalogo {
+  width: 100%;
+  display: flex;
+  padding: 3% 0%;
+  text-transform: uppercase;
 }
-span.swiper-pagination-bullet.swiper-pagination-bullet-active-next {
-    --swiper-pagination-color: #ffffff;
-        --swiper-pagination-border-color: #e94141;
-        --swiper-pagination-bullet-background-color: #9e2020c4;
-        --swiper-pagination-bullet-size: 8px;
-        --swiper-pagination-bullet-width: 12px;
-        --swiper-pagination-bullet-height: 12px;
-        --swiper-pagination-bullet-inactive-color: #000;
-        --swiper-pagination-bullet-inactive-opacity: 0.2;
-        --swiper-pagination-bullet-opacity: 1;
-        --swiper-pagination-bullet-horizontal-gap: 2px;
-        --swiper-pagination-bullet-border-radius: 0px;
+img.share_icon_catalogo {
+  width: 5%;
 }
-span.swiper-pagination-bullet.swiper-pagination-bullet-active-prev {
-    border-radius: 0%;
+
+.container_swiper_catalogo .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  display: block;
+  position: relative;
+  margin-bottom: 5px !important;
+  transform: unset !important;
+  border-radius: unset !important;
+  opacity: unset !important;
+  background: unset !important;
+  border: 3px solid #dfdfdf;
+  transition: 400ms ease-in-out !important;
+}
+
+.container_swiper_catalogo
+  .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  border: 3px solid #ec3237;
+}
+
+.container_swiper_catalogo .catalogo-pagination {
+  transform: unset !important;
+  left: 10% !important;
+  bottom: 50% !important;
+  top: unset !important;
 }
