--- a/assets/css/proyectos_1.css
+++ b/assets/css/proyectos_1.css
@@ -1,4 +1,5 @@
 /*------text-container------*/
+
 .container_text_3 {
     width: 100%;
     position: relative;
@@ -10,7 +11,8 @@
     justify-content: space-between;
     color: #363435;
 }
-.tittle_style_mobile { 
+
+.tittle_style_mobile {
     font-size: 2.8em;
     font-weight: 600;
     line-height: 90%;
@@ -19,6 +21,7 @@
     font-family: 'Frank Ruhl Libre', serif;
     letter-spacing: -3px;
 }
+
 .tittle_style_desktop_text {
     font-size: 2.8em;
     font-weight: 600;
@@ -28,6 +31,7 @@
     font-family: 'Frank Ruhl Libre', serif;
     letter-spacing: -3px;
 }
+
 .container_proyectos_1 {
     width: 100%;
     position: relative;
@@ -56,8 +60,9 @@
     color: #000000;
 }
 
+
 /*--------blue container-------*/
- 
+
 .container_blue_1_proyectos {
     width: 100%;
     position: relative;
@@ -120,19 +125,6 @@
     justify-content: space-between;
 }
 
-.container_icon_3 {
-    display: flex;
-    align-items: center;
-    position: relative;
-    text-align: left;
-}
-
-.text_style_blue {
-    margin-right: 15px;
-    color: #fff;
-    font-weight: 600;
-} 
-
 hr {
     border-top: 2px solid #ffffff;
 }
@@ -147,8 +139,105 @@ hr {
 .text_blue_col_2 {
     width: 100%;
 }
-                
+
+
+/*--grid-styles-proyectos--*/
+
+.container_grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    margin-top: 5rem;
+}
+
+@media (max-width: 768px) {
+    .container_grid {
+        grid-template-columns: 100%;
+    }
+}
+
+.icon_more_container {
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    display: block;
+    top: 30px;
+    right: 30px;
+    z-index: 5;
+}
+
+.content_row_1 {
+    margin-bottom: 1rem;
+    position: relative;
+}
+
+.content_row_4 {
+    position: relative;
+    margin-top: 1rem;
+}
+
+.content_row_1_info,
+.content_row_4_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    padding: 2rem;
+}
+
+.content_row_1_info p:nth-child(1),
+.content_row_4_info p:nth-child(1) {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+.content_row_2,
+.content_row_3 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content_row_3 img:nth-child(1) {
+    margin-bottom: 1rem;
+}
+
+.content_row_2_info,
+.content_row_3_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+    gap: 50px;
+}
+
+.content_row_5 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.content_row_5_info {
+    position: absolute;
+    top: 70%;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+}
+
+
 /*---white-content------*/
+
 .container_white_1_proyectos {
     width: 100%;
     position: relative;
@@ -156,6 +245,7 @@ hr {
     display: block;
     background-color: #ffffff;
 }
+
 .tittle_white {
     align-items: center;
     font-size: 3.9em;
@@ -172,7 +262,9 @@ hr {
     padding: 1% 22%;
 }
 
+
 /*-----responsive----*/
+
 @media screen and (min-width: 1440px) and (max-width: 1919px) {}
 
 @media screen and (min-width: 1366px) and (max-width: 1439px) {}
@@ -191,7 +283,6 @@ hr {
         justify-content: space-between;
         color: #000000;
     }
-
     .container_text_3 {
         width: 100%;
         position: relative;
@@ -203,8 +294,6 @@ hr {
         justify-content: space-between;
         color: #363435;
     }
-  
-    
     /*- ---blue container----*/
     .container_grid_blue {
         width: 100%;
@@ -217,24 +306,6 @@ hr {
         justify-content: space-between;
         color: #fff;
     }
-
-    .content_row_5_info {
-        position: absolute;
-        top: 40%;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-        text-align: center;
-        font-size: 40px;
-    }
-
-    .content_row_5 {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-
     /*------text-white--------*/
     .section_1 {
         width: 100%;
@@ -251,74 +322,8 @@ hr {
     }
 }
 
- @media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     /*-----container-proyectos-----*/
-.container_proyectos_3 {
-        width: 100%;
-        position: relative;
-        display: flex;
-        row-gap: 30px;
-        align-items: center;
-        flex-direction: column;
-        justify-content: space-between;
-        color: #000000;
-    }
-    .container_text_3 {
-        width: 100%;
-        position: relative;
-        display: flex;
-        flex-wrap: nowrap;
-        row-gap: 30px;
-        align-items: flex-start;
-        flex-direction: column;
-        justify-content: space-between;
-        color: #363435;
-    }
- 
-/*- ---blue container----*/
-.container_grid_blue {
-        width: 100%;
-        position: relative;
-        display: flex;
-        flex-wrap: nowrap;
-        row-gap: 30px;
-        align-items: center;
-        flex-direction: column;
-        justify-content: space-between;
-        color: #fff;
-    }
-    .content_row_5_info {
-        position: absolute;
-        top: 40%;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-        text-align: center;
-        font-size: 40px;
-    }
-    .content_row_5 {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-    /*------text-white--------*/
-    .section_1 {
-            width: 100%;
-            position: relative;
-            display: flex;
-            flex-wrap: nowrap;
-            row-gap: 89px;
-            align-items: center;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-         .tittle_white {
-            font-size: 2.5em;
-         }
-    }
- @media screen and (max-width: 767px) {
-/*-----container-proyectos-----*/
     .container_proyectos_3 {
         width: 100%;
         position: relative;
@@ -329,7 +334,6 @@ hr {
         justify-content: space-between;
         color: #000000;
     }
-
     .container_text_3 {
         width: 100%;
         position: relative;
@@ -340,7 +344,7 @@ hr {
         flex-direction: column;
         justify-content: space-between;
         color: #363435;
-    } 
+    }
     /*- ---blue container----*/
     .container_grid_blue {
         width: 100%;
@@ -353,24 +357,6 @@ hr {
         justify-content: space-between;
         color: #fff;
     }
-
-    .content_row_5_info {
-        position: absolute;
-        top: 40%;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-        text-align: center;
-        font-size: 40px;
-    }
-
-    .content_row_5 {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-
     /*------text-white--------*/
     .section_1 {
         width: 100%;
@@ -385,8 +371,59 @@ hr {
     .tittle_white {
         font-size: 2.5em;
     }
- }
-  
+}
+
+@media screen and (max-width: 767px) {
+    /*-----container-proyectos-----*/
+    .container_proyectos_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #000000;
+    }
+    .container_text_3 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #363435;
+    }
+    /*- ---blue container----*/
+    .container_grid_blue {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 30px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        color: #fff;
+    }
+    /*------text-white--------*/
+    .section_1 {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        row-gap: 89px;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tittle_white {
+        font-size: 2.5em;
+    }
+}
+
 @media screen and (min-width: 425px) and (max-width: 767px) {
     /*-----container-proyectos-----*/
     .container_proyectos_3 {
@@ -399,7 +436,6 @@ hr {
         justify-content: space-between;
         color: #000000;
     }
-
     .container_text_3 {
         width: 100%;
         position: relative;
@@ -411,8 +447,6 @@ hr {
         justify-content: space-between;
         color: #363435;
     }
-
-
     /*- ---blue container----*/
     .container_grid_blue {
         width: 100%;
@@ -425,24 +459,6 @@ hr {
         justify-content: space-between;
         color: #fff;
     }
-
-    .content_row_5_info {
-        position: absolute;
-        top: 40%;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-        text-align: center;
-        font-size: 40px;
-    }
-
-    .content_row_5 {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-
     /*------text-white--------*/
     .section_1 {
         width: 100%;
@@ -457,9 +473,9 @@ hr {
     .tittle_white {
         font-size: 2.5em;
     }
- }
+}
 
- @media screen and (max-width: 425px) {
+@media screen and (max-width: 425px) {
     /*-----container-proyectos-----*/
     .container_proyectos_3 {
         width: 100%;
@@ -471,7 +487,6 @@ hr {
         justify-content: space-between;
         color: #000000;
     }
-    
     .container_text_3 {
         width: 100%;
         position: relative;
@@ -486,7 +501,6 @@ hr {
     .tittle_style_desktop_text {
         font-size: 2.0em;
     }
-    
     /*- ---blue container----*/
     .container_grid_blue {
         width: 100%;
@@ -499,24 +513,6 @@ hr {
         justify-content: space-between;
         color: #fff;
     }
-
-    .content_row_5_info {
-        position: absolute;
-        top: 40%;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-        text-align: center;
-        font-size: 40px;
-    }
-
-    .content_row_5 {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-
     /*------text-text--------*/
     .section_1 {
         width: 100%;
@@ -531,4 +527,4 @@ hr {
     .tittle_white {
         font-size: 2.5em;
     }
- }
+}
